--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -85,6 +85,12 @@
 - id: links
   translation: Link
 
+- id: blog
+  translation: Artikel
+
+- id: event
+  translation: Acara
+
 - id: courses
   translation: Kursus
 
