--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -98,7 +98,7 @@
   translation: Galeri
 
 - id: new_notice
-  translation: Pemberitahuan
+  translation: Pengumuman
 
 - id: call
   translation: Telp
